--- a/Song_Popularity_Prediction_mit_Quellen.ipynb
+++ b/Song_Popularity_Prediction_mit_Quellen.ipynb
@@ -3812,6 +3812,7 @@
     "    <ul>\n",
     "        <li><b>Internet Webseiten</b></li>\n",
     "        <ul>\n",
+    "             <li><a href="https://www.kaggle.com/code/masumrumi/a-statistical-analysis-ml-workflow-of-titanic">A Statistical Analysis & ML workflow of Titanic</a></li>",
     "            <li><a href=\"https://www.geeksforgeeks.org/decision-tree-introduction-example/\">Decision Tree in Machine Learning</a></li>\n",
     "            <li><a href=\"https://towardsdatascience.com/decision-trees-in-machine-learning-641b9c4e8052\">Decision Trees in Machine Learning</a></li>\n",
     "            <li><a href=\"https://medium.com/@arpita.k20/gini-impurity-and-entropy-for-decision-tree-68eb139274d1\">Gini Impurity and Entropy for Decision Tree</a></li>\n",
@@ -3822,7 +3823,6 @@
     "        <li><b>Wissenschaftliche Literaturen</b></li>\n",
     "        <ul>\n",
     "            <li><a href=\"https://www.researchgate.net/profile/Vladimir-Nasteski/publication/328146111_An_overview_of_the_supervised_machine_learning_methods/links/5c1025194585157ac1bba147/An-overview-of-the-supervised-machine-learning-methods.pdf\">An overview of the supervised machine learning methods</a></li>\n",
-    "            <li><a href=\"https://www.kaggle.com/code/masumrumi/a-statistical-analysis-ml-workflow-of-titanic\">A Statistical Analysis & ML workflow of Titanic</a></li>\n",
     "            <li><a href=\"https://www.mdpi.com/2079-9292/11/21/3518\">Effect of feature selection on the accuracy of music popularity classification using machine learning algorithms</a></li>\n",
     "            <li><a href=\"https://learning.oreilly.com/library/view/machine-learning-with/9781782162148/ch07.html#ch07lvl1sec37\">Machine Learning with R</a></li>\n",
     "            <li><a href=\"https://link.springer.com/chapter/10.1007/978-981-16-0336-5_4\">Prediction of song popularity using machine learning concepts</a></li>\n",
