--- a/Song_Popularity_Prediction_mit_Quellen.ipynb
+++ b/Song_Popularity_Prediction_mit_Quellen.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "**3. Datenvisualisierung und Explorative Datenanalyse**\n",
     "\n",
-    "**3.1 Boxplots der Audiofeatures:**\n",
+    "**3.1 Boxplots der Audiofeatures**\n",
     "\n",
     "**3.2 Histogramme der Audiofeatures**\n",
     "\n",
@@ -839,7 +839,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **3.1 Boxplots der Audiofeatures:**"
+    "## **3.1 Boxplots der Audiofeatures**"
    ]
   },
   {
