--- a/Song_Popularity_Prediction_mit_Quellen.ipynb
+++ b/Song_Popularity_Prediction_mit_Quellen.ipynb
@@ -120,7 +120,7 @@
     "**9.4 Cross-Validation für das optimierte neuronale Netzwerk-Modell**\n",
     "\n",
     "\n",
-    "**10. Überblick ergebnisse aller Modelle**"
+    "**10. Überblick Ergebnisse aller Modelle**"
    ]
   },
   {
@@ -4306,7 +4306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **10. Überblick ergebnisse aller Modelle**\n",
+    "# **10. Überblick Ergebnisse aller Modelle**\n",
     "\n",
     "1. Non-Optimized Models:\n",
     "    - Linear Regression\n",
