--- a/Song_Popularity_Prediction_mit_Quellen.ipynb
+++ b/Song_Popularity_Prediction_mit_Quellen.ipynb
@@ -14,6 +14,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **Song Popularity Prediction**\n",
+    "\n",
+    "\n",
+    "Rouah Adul Jawad   Matrikel-Nr.: 5382671",
+    "\n",
+    "Luis Litters       Matrikel-Nr.: 4512765",
+    "\n",
+    "Mehmet Marijanovic Matrikel-Nr.: 3544801",
+
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"https://raw.githubusercontent.com/Masterx-AI/Project_Song_Popularity_Prediction_/main/songs.jpg\"  Width=\"800\">\n"
    ]
   },
