--- a/Song_Popularity_Prediction_mit_Quellen.ipynb
+++ b/Song_Popularity_Prediction_mit_Quellen.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Luis Litters       Matrikel-Nr.: 4512765",
     "\n",
-    "Mehmet Marijanovic Matrikel-Nr.: 3544801",
+    "Mehmet Marijanovic Matrikel-Nr.: 3544801"
    ]
   },
   {
