--- a/Song_Popularity_Prediction_mit_Quellen.ipynb
+++ b/Song_Popularity_Prediction_mit_Quellen.ipynb
@@ -10,13 +10,13 @@
     "*Datensatz: https://www.kaggle.com/datasets/yasserh/song-popularity-dataset*",
     "\n",
     "\n",
-    "Rouah Adul Jawad   Matrikel-Nr.: 5382671",
+    "*Rouah Adul Jawad   Matrikel-Nr.: 5382671*",
     "\n",
     "\n",
-    "Luis Litters       Matrikel-Nr.: 4512765",
+    "*Luis Litters       Matrikel-Nr.: 4512765*",
     "\n",
     "\n",
-    "Mehmet Marijanovic Matrikel-Nr.: 3544801"
+    "*Mehmet Marijanovic Matrikel-Nr.: 3544801*"
    ]
   },
   {
